[package]
name = "crossgen"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/crossgen"
documentation = "https://docs.rs/crossgen"
description = "Cross compilation template generator"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.2"
exitfailure = "0.5.1"
human-panic = "1.0.0"
structopt = "0.2.10"
log = "0.4.4"
clap_flags = "0.2.0"
mkdirp = "0.1.0"
reqwest = "0.8.8"
serde_derive = "1.0.75"
serde = "1.0.75"
base64 = "0.9.2"
openssl = "0.10.11"
github_auth = "0.6.0"
toml = "0.4.6"
cargo_toml = "0.3.0"

[dev-dependencies]

[build-dependencies]
mkdirp = "0.1.0"
structopt = "0.2.10"
clap_flags = "0.2.0"
failure = "0.1.2"
reqwest = "0.8.8"
serde_derive = "1.0.75"
serde = "1.0.75"
log = "0.4.4"
base64 = "0.9.2"
openssl = "0.10.11"
github_auth = "0.6.0"
toml = "0.4.6"
