[package]
name = "crossgen"
version = "0.5.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/crossgen"
documentation = "https://docs.rs/crossgen"
description = "Cross compilation template generator"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.2"
exitfailure = "0.5.1"
human-panic = "1.0.1"
structopt = "0.2.11"
log = "0.4.5"
clap_flags = "0.3.0"
mkdirp = "0.1.0"
reqwest = "0.9.2"
serde_derive = "1.0.79"
serde = "1.0.79"
base64 = "0.9.3"
openssl = "0.10.12"
github_auth = "0.7.1"
toml = "0.4.8"
cargo_toml = "0.3.0"

[build-dependencies]
mkdirp = "0.1.0"
structopt = "0.2.11"
clap_flags = "0.3.0"
failure = "0.1.2"
reqwest = "0.9.2"
serde_derive = "1.0.79"
serde = "1.0.79"
log = "0.4.5"
base64 = "0.9.3"
openssl = "0.10.12"
github_auth = "0.7.1"
toml = "0.4.8"
